--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<http>Hello Anna</http>
+<http>
+  <h>Hello Anna</h>
+
+<body>
+  Entities and entity rules
+Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.
+Card can be Person, Tool or Place
+Stock has 6 Persons, 6 Tools and 9 Places
+Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.
+Player is acting by issuing Clues.
+Clue is a declaration by a Player that consists of a Person, a Tool and a Place. A Clue can be final or not.
+Safe is a Clue that needs to be found by Players.
+
+Game setup
+Each Player gets a set of 4 cards as above 
+Actions and rules
+The game starts
+Players issue clues taking turns
+  </body>
+</http>
