--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <http>
-  <h>Hello Anna</h>
+  <head>Hello Anna</head>
 
 <body>
-  Entities and entity rules
+  <label>Entities and entity rules
 Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.
 Card can be Person, Tool or Place
 Stock has 6 Persons, 6 Tools and 9 Places
@@ -16,5 +16,6 @@ Each Player gets a set of 4 cards as above
 Actions and rules
 The game starts
 Players issue clues taking turns
+  </label>
   </body>
 </http>
