--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<http>
+<html>
   <head>Hello Anna</head>
 
 <body>
@@ -18,4 +18,4 @@ The game starts
 Players issue clues taking turns
   </label>
   </body>
-</http>
+</html>
