--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>Hello Anna</head>
 
 <body>
-  <label>Entities and entity rules
-Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.
+  <h2>Entities and entity rules</h2>
+<label>Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.
 Card can be Person, Tool or Place
 Stock has 6 Persons, 6 Tools and 9 Places
 Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.
