--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <body>
   <h2>Entities and entity rules</h2>
-<label>Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.
-Card can be Person, Tool or Place
+  <p>Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.</p>
+  <p>Card can be Person, Tool or Place</p>
 Stock has 6 Persons, 6 Tools and 9 Places
 Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.
 Player is acting by issuing Clues.
@@ -16,6 +16,6 @@ Each Player gets a set of 4 cards as above
 Actions and rules
 The game starts
 Players issue clues taking turns
-  </label>
+  
   </body>
 </html>
