--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <html>
-  <head>Hello Anna</head>
+  <head>Hello Dear</head>
 
 <body>
   <h2>Entities and entity rules</h2>
   <p>Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.</p>
   <p>Card can be Person, Tool or Place</p>
-Stock has 6 Persons, 6 Tools and 9 Places
-Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.
-Player is acting by issuing Clues.
-Clue is a declaration by a Player that consists of a Person, a Tool and a Place. A Clue can be final or not.
-Safe is a Clue that needs to be found by Players.
-
+<ul>
+  <li>Stock has 6 Persons, 6 Tools and 9 Places</li>
+  <li>Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.</li>
+  <li>Player is acting by issuing Clues.</li>
+  <li>Clue is a declaration by a Player that consists of a Person, a Tool and a Place. A Clue can be final or not.</li>
+  <li>Safe is a Clue that needs to be found by Players.</li>
+</ul>
 Game setup
 Each Player gets a set of 4 cards as above 
 Actions and rules
