--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <p>Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.</p>
   <p>Card can be Person, Tool or Place</p>
 <ul>
-  <li>Stock has 6 Persons, 6 Tools and 9 Places</li>
+  <li style="color:blue;">Stock has 6 Persons, 6 Tools and 9 Places</li>
   <li>Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.</li>
   <li>Player is acting by issuing Clues.</li>
   <li>Clue is a declaration by a Player that consists of a Person, a Tool and a Place. A Clue can be final or not.</li>
