--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <html>
-  <head>Hello Dear</head>
+ 
+<font size="6" color=:"#3333ff" face="verdana">Hello User!</font>
+
+<h2><font face="Cursive" color="#00906f" size="5">You will be playing clue but first here are some entities and enity rules:</font></h2>
 
 <body>
-  <h2>Entities and entity rules</h2>
-  <p>Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.</p>
-  <p>Card can be Person, Tool or Place</p>
+ 
+ <font face="sans-serif"><p>Game has Stock which is set of Cards, Players, Safe. Game proceeds as sequence of Clues.</p>
+  <p>Card can be Person, Tool or Place</p></font>
 <ul>
-  <li style="color:blue;">Stock has 6 Persons, 6 Tools and 9 Places</li>
+  <font color="#b30000"</font>
+  <li>The deck has 6 Persons, 6 Tools and 9 Places</li>
   <li>Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.</li>
-  <li>Player is acting by issuing Clues.</li>
-  <li>Clue is a declaration by a Player that consists of a Person, a Tool and a Place. A Clue can be final or not.</li>
-  <li>Safe is a Clue that needs to be found by Players.</li>
+  <li>Player is acting by issuing guesses of what is in the envalope.</li>
+  <li>A guess is a declaration by a Player that consists of a Person, a Tool and a Place. A Guess can be final or not.</li>
+  <li>In the envalope there is a random person, tool, and place.</li>
+  <li>What's inside the envalope needs to be found by Players by taking guesses and eliminating choices.</li></font>
 </ul>
-Game setup
+<h2><font face="Cursive" size="5" color="#00906f">Game setup:</font>
+<p><font color="#b30000" size="3"></h2>
 Each Player gets a set of 4 cards as above 
 Actions and rules
 The game starts
-Players issue clues taking turns
-  
+</font> 
   </body>
 </html>
+
