Changed the second header to you will be playing clue but first here are some rules for the game

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
 <font size="6" color=:"#3333ff" face="verdana">Hello User!</font>
 
-<h2><font face="Cursive" color="#00906f" size="5">You will be playing clue but first here are some entities and enity rules:</font></h2>
+<h2><font face="Cursive" color="#00906f" size="5">You will be playing clue but first here are some rules for the game:</font></h2>
 
 <body>
  
@@ -25,4 +25,3 @@ The game starts
 </font> 
   </body>
 </html>
-
