--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
 <font size="6" color=:"#3333ff" face="verdana">Hello User!</font>
 
-<h2><font face="Cursive" color="#00906f" size="5">You will be playing clue but first here are some rules for the game:</font></h2>
+<h2><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game:</font></h2>
 
 <body>
  
@@ -21,7 +21,7 @@
 <p><font color="#b30000" size="3"></h2>
 Each Player gets a set of 4 cards as above 
 Actions and rules
-The game starts
+The game starts with a player placing a guess
 </font> 
   </body>
 </html>
