added console log and alert

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
- 
-<font size="6" color=:"#3333ff" face="verdana">Hello User!</font>
+ <script>
+ function alert() = {
+ console.log("alerting");
+ window.alert("here");
+ }
+ </script>
+<font size="6" color=:"#3333ff" face="verdana">Hello </font>
 
-<h2><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game:</font></h2>
+<h2 onClick="alert()" ><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game:</font></h2>
 
 <body>
  
@@ -18,10 +23,10 @@
   <li>What's inside the envalope needs to be found by Players by taking guesses and eliminating choices.</li></font>
 </ul>
 <h2><font face="Cursive" size="5" color="#00906f">Game setup:</font>
-<p><font color="#b30000" size="3"></h2>
-Each Player gets a set of 4 cards as above 
+<font color="#b30000" size="3"></h2>
+<p>Each Player gets a set of 4 cards as above 
 Actions and rules
-The game starts with a player placing a guess
+The game starts with a player placing a guess</p>
 </font> 
   </body>
 </html>
