--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
  <script>
  function alert() = {
- console.log("alerting");
- window.alert("here");
+ console.log('alerting');
+ window.alert('here');
  }
  </script>
 <font size="6" color=:"#3333ff" face="verdana">Hello </font>
