--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
  window.alert('here');
  }
  </script>
+
 <font size="6" color=:"#3333ff" face="verdana">Hello </font>
+<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
 
 <h2 onClick="alert()" ><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game:</font></h2>
 
