added more context in the game setup section

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
   <font color="#b30000"</font>
   <li>The deck has 6 Persons, 6 Tools and 9 Places</li>
   <li>Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.</li>
-  <li>Player is acting by issuing guesses of what is in the envalope.</li>
-  <li>A guess is a declaration by a Player that consists of a Person, a Tool and a Place. A Guess can be final or not.</li>
-  <li>In the envalope there is a random person, tool, and place.</li>
-  <li>What's inside the envalope needs to be found by Players by taking guesses and eliminating choices.</li></font>
+  <li>Player is acting by issuing clues of what is in the Safe.</li>
+  <li>A Clue is a declaration by a Player that consists of a Person, a Tool and a Place. A Clue can be final or not.</li>
+  <li>In the Safe there is a random person, tool, and place.</li>
+  <li>What's inside the Safe needs to be found by Players by asking Clues and eliminating choices.</li></font>
 </ul>
-<h2><font face="Cursive" size="5" color="#00906f">Game setup:</font>
+<h2><font face="Cursive" size="5" color="#00906f">Game setup and play:</font>
 <font color="#b30000" size="3"></h2>
 <p>Each Player gets a set of 4 cards as above 
 Actions and rules
-The game starts with a player placing a guess</p>
+The game starts with a player placing a guess. Then the other Players answer with how many of the things listed are in their set of cards. After players say how many they have the person who asked the clue can do one of two things:
+ if only one person has a card that you named then they show you their card; if more than one player has a card listed then the person who asked the clue can choose which person he wants to show him the card. If someone has more than one card listed and they are choosen to show the card then they hoose only one card to let the clue asker see. However if no one has a card they proceed to the next persons turn. When the card is being shown<em><b>only show the card to the person who asked the clue and not any other players.</em></b>
+ </p>
 </font> 
   </body>
 </html>
