--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <font size="6" color=:"#3333ff" face="verdana">Hello </font>
 <img src="clue2013.jpg" alt="clue gameboard" width="100" height="100">
 
-<h2 onClick="alert()" ><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game:</font></h2>
+<h2 onClick="alert()" ><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game:</font></h2><img src="clue2013.jpg" alt="clue gameboard" width="500" height="500">
+
 
 <body>
  
