tried to make a popup

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
  function alert() = {
  console.log('alerting');
  window.alert('here');
- }
+ } <div class="popup" onclick="myFunction()">Click here to see why this page is in progress.
+  <span class="popuptext" id="myPopup">This website is being made to cerat a simplified version of clue, the game will hopefully be out by the end of May. <em>please stand by</em></span>
+</div>
  </script>
 
 <font size="6" color=:"#3333ff" face="verdana">Hello </font>
