--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p>Each Player gets a set of 4 cards as above 
 Actions and rules
 The game starts with a player placing a guess. Then the other Players answer with how many of the things listed are in their set of cards. After players say how many they have the person who asked the clue can do one of two things:
- if only one person has a card that you named then they show you their card; if more than one player has a card listed then the person who asked the clue can choose which person he wants to show him the card. If someone has more than one card listed and they are choosen to show the card then they choose only one card to let the clue asker see. However if no one has a card they proceed to the next persons turn. When the card is being shown> <em><b>only show the card to the person who asked the clue and not any other players.</p> </em></b>
+ if only one person has a card that you named then they show you their card; if more than one player has a card listed then the person who asked the clue can choose which person he wants to show him the card. If someone has more than one card listed and they are choosen to show the card then they choose only one card to let the clue asker see. However if no one has a card they proceed to the next persons turn. When the card is being shown <em><b>only show the card to the person who asked the clue and not any other players.</p> </em></b>
 </font> 
   </body>
 </html>
