--- a/index.html
+++ b/index.html
@@ -3,9 +3,81 @@
  function alert() = {
  console.log('alerting');
  window.alert('here');
- } <div class="popup" onclick="myFunction()">Click here to see why this page is in progress.
-  <span class="popuptext" id="myPopup">This website is being made to cerat a simplified version of clue, the game will hopefully be out by the end of May. <em>please stand by</em></span>
+ } <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* Popup container - can be anything you want */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 1,000px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
+</style>
+</head>
+<body style="text-align:center">
+
+<font size="7"><h2>Website not working?</h2></font>
+
+<font size="5"><div class="popup" onclick="myFunction()">Click here to find out why the website is not done yet.</font>
+  <span class="popuptext" id="myPopup">The website is an in-progress work for making an online simpler version of the 2013 version clue, we are not done yet but hope to finsih this by the end of May. <em>please stand by...</em></span>
 </div>
+
+<script>
+// When the user clicks on div, open the popup
+function myFunction() {
+  var popup = document.getElementById("myPopup");
+  popup.classList.toggle("show");
+}
  </script>
 
 <font size="6" color=:"#3333ff" face="verdana">Hello </font>
