tried to fix popup

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <html>
- <script>
- function alert() = {
- console.log('alerting');
- window.alert('here');
- } <head>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 /* Popup container - can be anything you want */
@@ -77,6 +73,10 @@
 function myFunction() {
   var popup = document.getElementById("myPopup");
   popup.classList.toggle("show");
+}
+</script>
+
+</body>
 }
  </script>
 
