--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
+<!DOCTYPE html>
+<html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -75,6 +77,9 @@ function myFunction() {
   popup.classList.toggle("show");
 }
 </script>
+
+</body>
+</html>
 
 </body>
 }
