made it hello user

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function myFunction() {
 }
  </script>
 
-<font size="6" color=:"#3333ff" face="verdana">Hello </font>
+<font size="6" color=:"#3333ff" face="verdana">Hello User!/font>
 
 
 <h2 onClick="alert()" ><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game: 
