--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ function myFunction() {
 }
 </script>
 
-<font size="6" color=:"#3333ff" face="verdana">Hello User!</font>
+<h2><font size="6" color=:"#3333ff" face="verdana">Hello User!</font></h2>
 
 
 <h2 onClick="myFunction()" ><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game:</font></h2> 
