tried to make hello user a heading

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 </div>
 
 
-<font size="6" color=:"#3333ff" face="verdana">Hello User!</font>
+<h2><font size="6" color=:"#3333ff" face="verdana">Hello User!</font></h2>
 
 
 <h2 onClick="myFunction()" ><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game:</font></h2> 
-<h2><img src="clue2013.jpg" alt="clue gameboard" width="500" height="500"></h2>
+<img src="clue2013.jpg" alt="clue gameboard" width="500" height="500">
 
 
  
