removed list item for game setup and play. added words to the h2

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <h2><font size="6" color=:"#3333ff" face="verdana">Hello User!</font></h2>
 
 
-<h2 onClick="myFunction()" ><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some rules for the game:</font></h2> 
+<h2 onClick="myFunction()" ><font face="Cursive" color="#00906f" size="5">You will be playing clue simplified but first here are some entities and entity rules for the game:</font></h2> 
 <img src="clue2013.jpg" alt="clue gameboard" width="500" height="500">
 
 
@@ -83,12 +83,12 @@
   <p>Card can be Person, Tool or Place</p></font>
 <ul>
   <font color="#b30000"</font>
-  <li>The deck has 6 Persons, 6 Tools and 9 Places</li>
-  <li>Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.</li>
-  <li>Player is acting by issuing clues of what is in the Safe.</li>
-  <li>A Clue is a declaration by a Player that consists of a Person, a Tool and a Place. A Clue can be final or not.</li>
-  <li>In the Safe there is a random person, tool, and place.</li>
-  <li>What's inside the Safe needs to be found by Players by asking Clues and eliminating choices.</li></font>
+  The deck has 6 Persons, 6 Tools and 9 Places</li>
+  Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.
+  Player is acting by issuing clues of what is in the Safe.
+  A Clue is a declaration by a Player that consists of a Person, a Tool and a Place. A Clue can be final or not.
+  In the Safe there is a random person, tool, and place.
+  What's inside the Safe needs to be found by Players by asking Clues and eliminating choices.</font>
 </ul>
 <h2><font face="Cursive" size="5" color="#00906f">Game setup and play:</font></h2>
 <p>Each Player gets a set of 4 cards as above 
