--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
   <p>Card can be Person, Tool or Place</p></font>
 <ul>
   <font color="#b30000"</font>
-  The deck has 6 Persons, 6 Tools and 9 Places</li>
+  <p>The deck has 6 Persons, 6 Tools and 9 Places</li>
   Player is a Game Actor. Player has precisely one Person and set of 3 Cards none of which is another Person.
   Player is acting by issuing clues of what is in the Safe.
   A Clue is a declaration by a Player that consists of a Person, a Tool and a Place. A Clue can be final or not.
   In the Safe there is a random person, tool, and place.
-  What's inside the Safe needs to be found by Players by asking Clues and eliminating choices.</font>
+  What's inside the Safe needs to be found by Players by asking Clues and eliminating choices.</p></font>
 </ul>
 <h2><font face="Cursive" size="5" color="#00906f">Game setup and play:</font></h2>
 <p>Each Player gets a set of 4 cards as above 
