fixed spelling + added "!"

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h2><font size="7"><h2>Website not working?</font></h2>
 
 <div class="popup" onclick="myFunction()"><font size="5">Click here to find out why the website is not done yet.</font>
-  <span class="popuptext" id="myPopup">This website is an in-progress work for making an online simpler version of the 2013 version clue (but only using the house side of the board in the game), we are not done yet but hope to finsih this by the end of May. Thank you for waiting <font size="5"><em> ⚠️ please stand by...⚠️</em</font></span></font></em></p>
+  <span class="popuptext" id="myPopup">This website is an in-progress work for making an online simpler version of the 2013 version clue (but only using the house side of the board in the game), we are not done yet but hope to finish this by the end of May. Thank you for waiting! <font size="5"><em> ⚠️ please stand by...⚠️</em</font></span></font></em></p>
 </div>
 
 
